samples/_failures_safe/1761360801_88cf37_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_408047ae.c: In function ‘tokenize’:
./samples/SAFE/__tmp_408047ae.c:160:16: error: expected declaration or statement at end of input
  160 |         struct Token token;
      |                ^~~~~
./samples/SAFE/__tmp_408047ae.c:160:16: error: expected declaration or statement at end of input
